--- a/webfront/Gemfile
+++ b/webfront/Gemfile
@@ -11,6 +11,7 @@ gem 'bson_ext'
 gem 'mongoid'
 gem 'amqp', '~> 0.8.0.RC13'
 gem 'bunny'
+gem 'devise'
 
 # Use unicorn as the web server
 # gem 'unicorn'
