Fix exisiting unit tests and write unit tests for submitting solutions

--- a/webfront/Gemfile
+++ b/webfront/Gemfile
@@ -42,6 +42,7 @@ group :development, :test do
   gem 'rspec-rails'
   gem 'fabrication'
   gem 'faker'
+  gem 'mocha'
 end
 # group :development, :test do
 #   gem 'webrat'
